# FFW-Day-3

./: main.py  pyproject.toml
.lesson/: instructions.md
static/: style.css
templates/: add.html  base.html  error.html  exercise.html  index.html
